--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ Produção:
 Para vir.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a> (2023).
-
+12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a>.
+<a href="https://arxiv.org/abs/2312.17121">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
