--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a
 Produção:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-13. A modular ramified geometric Satake equivalence (com Pramod Achar, Timo Richarz, e Simon Riche).
-Para vir.
+13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (com Pramod Achar, Timo Richarz, e Simon Riche).
+<a href="https://arxiv.org/abs/2403.10651">arXiv</a> (2024).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a>.
