--- a/indexde.html
+++ b/indexde.html
@@ -27,8 +27,8 @@ Sprachen: <a href="https://rastrel.github.io/Lourenco/indexen">en</a>, <a href="
 Arbeiten:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-13. A modular ramified geometric Satake equivalence (mit Pramod Achar, Timo Richarz, und Simon Riche).
-In Entstehung.
+13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (mit Pramod Achar, Timo Richarz, und Simon Riche).
+<a href="https://arxiv.org/abs/2403.10651">arXiv</a> (2024).
 </p>
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a>.
