--- a/indexen.html
+++ b/indexen.html
@@ -27,8 +27,8 @@ Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <
 Papers:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-13. A modular ramified geometric Satake equivalence (with Pramod Achar, Timo Richarz, and Simon Riche).
-In preparation.
+13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (with Pramod Achar, Timo Richarz, and Simon Riche).
+<a href="https://arxiv.org/abs/2403.10651">arXiv</a> (2024).
 </p>
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 12. <a href="https://rastrel.github.io/Lourenco/distloop.pdf">Distributions and normality theorems</a>.
