--- a/indexde.html
+++ b/indexde.html
@@ -14,6 +14,7 @@
 <br>
 <p style="font-family: Garamond, serif;">
 Universität Münster. Akademischer Rat auf Zeit.
+  Forschungsgruppenleiter im Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität.
 </p>
 <br>
   <p style="font-family: Garamond, serif;">
