--- a/indexen.html
+++ b/indexen.html
@@ -14,6 +14,8 @@
 <br>
 <p style="font-family: Garamond, serif;">
 Universität Münster. Akademischer Rat auf Zeit. 
+  Principal Investigator in the Collaborative Research Centre 1442 Geometry: Deformations and Rigidity.
+
 </p>
 <br>
   <p style="font-family: Garamond, serif;">
