--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Investigador principal no Sonderforschungsbereich 1442 Geometrie: Deformationen 
 </p>
  <br>
 <p style="font-family: Garamond, serif;">
-Línguas:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a> 
+Línguas: <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a> 
   </p>      
 <p style="font-family: Garamond, serif;">
 <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">Currículo</a>.
