--- a/indexen.html
+++ b/indexen.html
@@ -19,7 +19,7 @@ Universität Münster. Akademischer Rat auf Zeit.
 </p>
 <br>
   <p style="font-family: Garamond, serif;">
-Languages:  <a href="https://rastrel.github.io/Lourenco//indexde.html">de</a>, <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
+Languages:  <a href="https://rastrel.github.io/Lourenco//index.html">pt</a> 
   </p>    
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 <a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">CV</a>.
