--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Produção:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. <a href="https://rastrel.github.io/Lourenco/tubengbhd.pdf">Tubular neighborhoods of local models</a> (com Ian Gleason).
-<a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022). Duke Math. J.
+<a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022). Duke Math. J. 173 (2024), no. 4, 723-743.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
@@ -62,7 +62,7 @@ Produção:
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_22.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a> (2020). 
-  Ann. Sci. Éc. Norm. Supér.
+  Ann. Sci. Éc. Norm. Supér. (4) 57 (2024), no. 3, 895-959.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
@@ -71,11 +71,11 @@ Produção:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 3. <a href="https://rastrel.github.io/Lourenco/btjou.pdf">Théorie de Bruhat-Tits pour les groupes quasi-réductifs</a>. 
   <a href="https://arxiv.org/abs/2001.05362">arXiv</a> (2020).
-  J. Inst. Math. Jussieu.
+  J. Inst. Math. Jussieu. 21 (2022), no. 4, 1331-1362.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 2. <a href="https://rastrel.github.io/Lourenco/graffjou2.pdf">Grassmanniennes affines tordues sur les entiers</a>. <a href="https://arxiv.org/abs/1912.11918">arXiv</a> (2019).
-  Forum Math. Sigma.
+  Forum Math. Sigma. 11 (2023), Paper No. e12, 65 pp.
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 1. The Riemannian Hebbarkeitssätze for pseudorigid spaces. <a href="https://arxiv.org/abs/1711.06903">arXiv</a> (2017).
