--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <br>
 <p style="font-family: Garamond, serif;">
 Universität Münster. Akademischer Rat auf Zeit. 
-Investigador principal no Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität.
+Investigador principal no <a href="https://gepris.dfg.de/gepris/projekt/427320536">Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität</a>.
 </p>
  <br>
 <p style="font-family: Garamond, serif;">
