--- a/indexen.html
+++ b/indexen.html
@@ -14,7 +14,7 @@
 <br>
 <p style="font-family: Garamond, serif;">
 Universität Münster. Akademischer Rat auf Zeit. 
-  Principal Investigator in the Collaborative Research Centre 1442 Geometry: Deformations and Rigidity.
+  Principal Investigator in the <a href="https://gepris.dfg.de/gepris/projekt/427320536">Collaborative Research Centre 1442 Geometry: Deformations and Rigidity</a>.
 
 </p>
 <br>
