--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Produção:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
   8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models</a> (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
-<a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022).
+<a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022). Math. Ann.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. <a href="https://rastrel.github.io/Lourenco/tubengbhd.pdf">Tubular neighborhoods of local models</a> (com Ian Gleason).
