--- a/indexen.html
+++ b/indexen.html
@@ -50,7 +50,7 @@ Papers:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
   8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models</a> (with Najmuddin Fakhruddin, Thomas Haines, and Timo Richarz).
-<a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022).
+<a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022). Math. Ann.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 7. <a href="https://rastrel.github.io/Lourenco/tubengbhd.pdf">Tubular neighborhoods of local models</a> (with Ian Gleason).
