--- a/index.html
+++ b/index.html
@@ -87,8 +87,15 @@ Produção:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Ensino:
 </p>
+   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+6. <a href="https://rastrel.github.io/Lourenco/oberseminarws2425.pdf">Vector bundles in the v-topology and Sen theory</a> (com Eugen Hellmann e Lucas Mann). Münster (2024).
+</p>  
+ 
+   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+5. <a href="https://rastrel.github.io/Lourenco/skriptalggeom2.pdf">Algebraic Geometry II</a>. Münster (2024).
+</p>   
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. <a href="https://rastrel.github.io/Lourenco/seminarhomfrob.pdf">Homological and Frobenius methods in commutative algebra</a>. Münster(2023).
+4. <a href="https://rastrel.github.io/Lourenco/seminarhomfrob.pdf">Homological and Frobenius methods in commutative algebra</a>. Münster (2023).
 </p>  
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (com Konrad Zou). Essen, Münster, Bona (2022).
