--- a/indexen.html
+++ b/indexen.html
@@ -88,6 +88,12 @@ Papers:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Teaching:
 </p>
+   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+6. <a href="https://rastrel.github.io/Lourenco/oberseminarws2425.pdf">Vector bundles in the v-topology and Sen theory</a> (with Eugen Hellmann and Lucas Mann). Münster (2024).
+</p>  
+    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+5. <a href="https://rastrel.github.io/Lourenco/skriptalggeom2.pdf">Algebraic Geometry II</a>. Münster (2024).
+</p>    
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 4. <a href="https://rastrel.github.io/Lourenco/seminarhomfrob.pdf">Homological and Frobenius methods in commutative algebra</a>. Münster(2023).
 </p>  
