--- a/indexen.html
+++ b/indexen.html
@@ -29,6 +29,10 @@ Languages:  <a href="https://rastrel.github.io/Lourenco//index.html">pt</a>
 Papers:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+14. <a href="https://rastrel.github.io/Lourenco/modpsheaves.pdf">Mod p sheaves on Witt flags</a> (com Robert Cass).
+<a href="https://arxiv.org/abs/">arXiv</a> (2025).
+</p>
+  <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (with Pramod Achar, Timo Richarz, and Simon Riche).
 <a href="https://arxiv.org/abs/2403.10651">arXiv</a> (2024).
 </p>
@@ -112,5 +116,5 @@ Teaching:
   
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Coauthors: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, and <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
+Coauthors: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://janschuetz.perso.math.cnrs.fr/">Johannes Anschütz</a>, <a href="https://websites.umich.edu/~cassr/">Robert Cass</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, and <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
