--- a/index.html
+++ b/index.html
@@ -116,5 +116,5 @@ Ensino:
   
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Coautores: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://www.math.uni-bonn.de/people/ja/">Johannes Anschütz</a>, Robert Cass, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
+Coautores: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://janschuetz.perso.math.cnrs.fr/">Johannes Anschütz</a>, <a href="https://websites.umich.edu/~cassr/">Robert Cass</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://timo-richarz.com/">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
