--- a/indexen.html
+++ b/indexen.html
@@ -30,7 +30,7 @@ Papers:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 14. <a href="https://rastrel.github.io/Lourenco/modpsheaves.pdf">Mod p sheaves on Witt flags</a> (com Robert Cass).
-<a href="https://arxiv.org/abs/">arXiv</a> (2025).
+<a href="https://arxiv.org/abs/2503.01796">arXiv</a> (2025).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (with Pramod Achar, Timo Richarz, and Simon Riche).
