--- a/indexen.html
+++ b/indexen.html
@@ -29,6 +29,9 @@ Languages:  <a href="https://rastrel.github.io/Lourenco//index.html">pt</a>
 Papers:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+15. <a href="https://rastrel.github.io/Lourenco/habilitation.pdf">Geometric representation theory and p-adic geometry</a> (2025).
+</p>  
+  <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 14. <a href="https://rastrel.github.io/Lourenco/modpsheaves.pdf">Mod p sheaves on Witt flags</a> (com Robert Cass).
 <a href="https://arxiv.org/abs/2503.01796">arXiv</a> (2025).
 </p>
@@ -70,7 +73,7 @@ Papers:
   Ann. Sci. Éc. Norm. Supér. (4) 57 (2024), no. 3, 895-959.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
+4. <a href="https://rastrel.github.io/Lourenco/Lou_dissertation.pdf">Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
 <a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a> (2020).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
