--- a/indexen.html
+++ b/indexen.html
@@ -73,7 +73,7 @@ Papers:
   Ann. Sci. Éc. Norm. Supér. (4) 57 (2024), no. 3, 895-959.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-4. <a href="https://rastrel.github.io/Lourenco/Lou_dissertation.pdf">Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux. 
+4. <a href="https://rastrel.github.io/Lourenco/Lou_dissertation.pdf">Théorie de Bruhat-Tits, grassmanniennes affines et modèles locaux</a>. 
 <a href="https://bonndoc.ulb.uni-bonn.de/xmlui/handle/20.500.11811/8641">Landesbibliothek der Uni Bonn</a> (2020).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
