--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@ Produção:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Ensino:
 </p>
+  <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+7. <a href="https://rastrel.github.io/Lourenco/oberseminarSS25.pdf">Affine Deligne-Lusztig theory</a> (com Eva Viehmann e Ioannis Zachos). Münster (2025).
+</p>   
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. <a href="https://rastrel.github.io/Lourenco/oberseminarws2425.pdf">Vector bundles in the v-topology and Sen theory</a> (com Eugen Hellmann e Lucas Mann). Münster (2024).
-</p>  
- 
+</p>   
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 5. <a href="https://rastrel.github.io/Lourenco/skriptalggeom2.pdf">Algebraic Geometry II</a>. Münster (2024).
 </p>   
