--- a/indexen.html
+++ b/indexen.html
@@ -95,6 +95,9 @@ Papers:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Teaching:
 </p>
+    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
+7. <a href="https://rastrel.github.io/Lourenco/oberseminarSS25.pdf">Affine Deligne-Lusztig theory</a> (with Eva Viehmann and Ioannis Zachos). Münster (2025).
+</p>   
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 6. <a href="https://rastrel.github.io/Lourenco/oberseminarws2425.pdf">Vector bundles in the v-topology and Sen theory</a> (with Eugen Hellmann and Lucas Mann). Münster (2024).
 </p>  
