--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Ensino:
 2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (com Eva Viehmann). Münster (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. <a href="https://rastrel.github.io/Lourenco/Fargues_Scholze%20seminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (com Matteo Tamiozzo). Londres (2020).
+1. <a href="https://rastrel.github.io/Lourenco/FSseminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (com Matteo Tamiozzo). Londres (2020).
 </p>
 
 
