--- a/indexen.html
+++ b/indexen.html
@@ -114,7 +114,7 @@ Teaching:
 2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (with Eva Viehmann). Münster (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. <a href="https://rastrel.github.io/Lourenco/Fargues_Scholze seminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (with Matteo Tamiozzo). London (2020).
+1. <a href="https://rastrel.github.io/Lourenco/FSseminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (with Matteo Tamiozzo). London (2020).
 </p>
 
 
