--- a/index.html
+++ b/index.html
@@ -14,28 +14,25 @@
 <br>
 <p style="font-family: Garamond, serif;">
 Universität Münster. Akademischer Rat auf Zeit. 
-Investigador principal no <a href="https://gepris.dfg.de/gepris/projekt/427320536">Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität</a>.
+Chercheur principal du <a href="https://gepris.dfg.de/gepris/projekt/427320536">Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität</a>.
 </p>
  <br>
 <p style="font-family: Garamond, serif;">
-Línguas: <a href="https://rastrel.github.io/Lourenco//indexen.html">en</a> 
-  </p>      
-<p style="font-family: Garamond, serif;">
-<a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">Currículo</a>.
+<a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">CV</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Produção:
+Travaux:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 15. <a href="https://rastrel.github.io/Lourenco/habilitation.pdf">Geometric representation theory and p-adic geometry</a> (2025).
 </p>  
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-14. <a href="https://rastrel.github.io/Lourenco/modpsheaves.pdf">Mod p sheaves on Witt flags</a> (com Robert Cass).
+14. <a href="https://rastrel.github.io/Lourenco/modpsheaves.pdf">Mod p sheaves on Witt flags</a> (avec Robert Cass).
 <a href="https://arxiv.org/abs/2503.01796">arXiv</a> (2025).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (com Pramod Achar, Timo Richarz, e Simon Riche).
+13. <a href="https://rastrel.github.io/Lourenco/ram-sat.pdf">A modular ramified geometric Satake equivalence</a> (avec Pramod Achar, Timo Richarz, et Simon Riche).
 <a href="https://arxiv.org/abs/2403.10651">arXiv</a> (2024).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
@@ -43,31 +40,31 @@ Produção:
 <a href="https://arxiv.org/abs/2312.17121">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (com Johannes Anschütz, Zhiyou Wu, e Jize Yu).
+11. <a href="https://rastrel.github.io/Lourenco/perversehecke.pdf">Gaitsgory's central functor and the Arkhipov-Bezrukavnikov equivalence in mixed characteristic</a> (avec Johannes Anschütz, Zhiyou Wu, et Jize Yu).
 <a href="https://arxiv.org/abs/2311.04043">arXiv</a> (2023).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-10. <a href="https://rastrel.github.io/Lourenco/fix-pts.pdf">Fixed points under pinning-preserving automorphisms of reductive group schemes</a> (com Pramod Achar, Timo Richarz, e Simon Riche).
+10. <a href="https://rastrel.github.io/Lourenco/fix-pts.pdf">Fixed points under pinning-preserving automorphisms of reductive group schemes</a> (avec Pramod Achar, Timo Richarz, et Simon Riche).
 <a href="https://arxiv.org/abs/2212.10182">arXiv</a> (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-9. <a href="https://rastrel.github.io/Lourenco/NStrata.pdf">On the connectedness of p-adic period domains</a> (com Ian Gleason).
+9. <a href="https://rastrel.github.io/Lourenco/NStrata.pdf">On the connectedness of p-adic period domains</a> (avec Ian Gleason).
 <a href="https://arxiv.org/abs/2210.08625">arXiv</a> (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-  8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models</a> (com Najmuddin Fakhruddin, Thomas Haines, e Timo Richarz).
+  8. <a href="https://rastrel.github.io/Lourenco/singlocmodels.pdf">Singularities of local models</a> (avec Najmuddin Fakhruddin, Thomas Haines, et Timo Richarz).
 <a href="https://arxiv.org/abs/2208.12072">arXiv</a> (2022). Math. Ann. 391 (2025), no. 4, 6205-6250.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-7. <a href="https://rastrel.github.io/Lourenco/tubengbhd.pdf">Tubular neighborhoods of local models</a> (com Ian Gleason).
+7. <a href="https://rastrel.github.io/Lourenco/tubengbhd.pdf">Tubular neighborhoods of local models</a> (avec Ian Gleason).
 <a href="https://arxiv.org/abs/2204.05526">arXiv</a> (2022). Duke Math. J. 173 (2024), no. 4, 723-743.
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (com Johannes Anschütz, Ian Gleason, e Timo Richarz).
+6. <a href="https://rastrel.github.io/Lourenco/affine_grass.pdf">On the p-adic theory of local models</a> (avec Johannes Anschütz, Ian Gleason, et Timo Richarz).
 <a href="https://arxiv.org/abs/2201.01234">arXiv</a> (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_22.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (com Thomas Haines, e Timo Richarz). 
+5. <a href="https://rastrel.github.io/Lourenco/NoSV_HLR_22.pdf">On the normality of Schubert varieties: remaining cases in positive characteristic</a> (avec Thomas Haines, et Timo Richarz). 
 <a href="https://arxiv.org/abs/1806.11001">arXiv</a> (2020). 
   Ann. Sci. Éc. Norm. Supér. (4) 57 (2024), no. 3, 895-959.
 </p>
@@ -92,13 +89,13 @@ Produção:
  
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Ensino:
+Enseignement:
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-7. <a href="https://rastrel.github.io/Lourenco/oberseminarSS25.pdf">Affine Deligne-Lusztig theory</a> (com Eva Viehmann e Ioannis Zachos). Münster (2025).
+7. <a href="https://rastrel.github.io/Lourenco/oberseminarSS25.pdf">Affine Deligne-Lusztig theory</a> (avec Eva Viehmann et Ioannis Zachos). Münster (2025).
 </p>   
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-6. <a href="https://rastrel.github.io/Lourenco/oberseminarws2425.pdf">Vector bundles in the v-topology and Sen theory</a> (com Eugen Hellmann e Lucas Mann). Münster (2024).
+6. <a href="https://rastrel.github.io/Lourenco/oberseminarws2425.pdf">Vector bundles in the v-topology and Sen theory</a> (avec Eugen Hellmann et Lucas Mann). Münster (2024).
 </p>   
    <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 5. <a href="https://rastrel.github.io/Lourenco/skriptalggeom2.pdf">Algebraic Geometry II</a>. Münster (2024).
@@ -107,13 +104,13 @@ Ensino:
 4. <a href="https://rastrel.github.io/Lourenco/seminarhomfrob.pdf">Homological and Frobenius methods in commutative algebra</a>. Münster (2023).
 </p>  
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (com Konrad Zou). Essen, Münster, Bona (2022).
+3. <a href="https://rastrel.github.io/Lourenco/bezrukavnikov_seminar.pdf">The Bezrukavnikov equivalence</a> (avec Konrad Zou). Essen, Münster, Bona (2022).
 </p>
   <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (com Eva Viehmann). Münster (2022).
+2. <a href="https://rastrel.github.io/Lourenco/seminardarstgruppen.pdf">Darstellungstheorie endlicher Gruppen</a> (avec Eva Viehmann). Münster (2022).
 </p>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-1. <a href="https://rastrel.github.io/Lourenco/FSseminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (com Matteo Tamiozzo). Londres (2020).
+1. <a href="https://rastrel.github.io/Lourenco/FSseminar.pdf">Fargues-Scholze's geometrization of the local Langlands correspondence</a> (avec Matteo Tamiozzo). Londres (2020).
 </p>
 
 
@@ -121,5 +118,5 @@ Ensino:
   
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
-Coautores: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://janschuetz.perso.math.cnrs.fr/">Johannes Anschütz</a>, <a href="https://websites.umich.edu/~cassr/">Robert Cass</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://www.mathematik.tu-darmstadt.de/fb/personal/details/timo_richarz_1.en.jsp">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, e <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
+Coauteurs: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://janschuetz.perso.math.cnrs.fr/">Johannes Anschütz</a>, <a href="https://websites.umich.edu/~cassr/">Robert Cass</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://www.mathematik.tu-darmstadt.de/fb/personal/details/timo_richarz_1.en.jsp">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, et <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
