--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 <h1 style="font-family: Garamond, serif;"> João Lourenço </h1>
 <br>
 <p style="font-family: Garamond, serif;">
-Universität Münster. Akademischer Rat auf Zeit. 
+Universität Münster. Akademischer Rat auf Zeit.
+</p>
+<p style="font-family: Garamond, serif;">
 Chercheur principal du <a href="https://gepris.dfg.de/gepris/projekt/427320536">Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität</a>.
 </p>
  <br>
 <p style="font-family: Garamond, serif;">
-<a href="https://rastrel.github.io/Lourenco/vitaenglish.pdf">CV</a>.
+<a href="https://rastrel.github.io/Lourenco/vitafrancais.pdf">CV</a>.
 </p>
 <br>
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
