--- a/index.html
+++ b/index.html
@@ -13,12 +13,9 @@
 <h1 style="font-family: Garamond, serif;"> João Lourenço </h1>
 <br>
 <p style="font-family: Garamond, serif;">
-Universität Münster. Akademischer Rat auf Zeit.
+Université Sorbonne Paris Nord (Paris 13). Professeur des universités.
 </p>
-<p style="font-family: Garamond, serif;">
-Chercheur principal du <a href="https://gepris.dfg.de/gepris/projekt/427320536">Sonderforschungsbereich 1442 Geometrie: Deformationen und Rigidität</a>.
-</p>
- <br>
+<br>
 <p style="font-family: Garamond, serif;">
 <a href="https://rastrel.github.io/Lourenco/vitafrancais.pdf">CV</a>.
 </p>
@@ -119,3 +116,4 @@ Enseignement:
 <p style="font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif;">
 Coauteurs: <a href="https://www.math.lsu.edu/~pramod/">Pramod Achar</a>, <a href="https://janschuetz.perso.math.cnrs.fr/">Johannes Anschütz</a>, <a href="https://websites.umich.edu/~cassr/">Robert Cass</a>, Najmuddin Fakhruddin, <a href="https://ianandreigf.github.io/Website/">Ian Gleason</a>, <a href="https://www.math.umd.edu/~tjh/">Thomas Haines</a>, <a href="https://www.mathematik.tu-darmstadt.de/fb/personal/details/timo_richarz_1.en.jsp">Timo Richarz</a>, <a href="https://lmbp.uca.fr/~riche/">Simon Riche</a>, Zhiyou Wu, et <a href="https://sites.google.com/view/jize-yu-math/home?authuser=0">Jize Yu</a>.
 </p>
+
